# esp32_esp32_repro

./: CMakeLists.txt  README.md  sdkconfig
front/website/: index.html  package.json  pnpm-workspace.yaml
front/website/src/: main.js
main/: CMakeLists.txt  Kconfig.projbuild  config.h  host_usb_cdc.c  http_server.c  http_server.h  idf_component.yml  main.c  rest_server.c  serial_flasher.c  upload_script.html  usb_cdc.c  usb_cdc.h  wifi_controller.c  wifi_controller.h
